# mcp-farm

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  compose.yaml  pyproject.toml
.bmad-core/: install-manifest.yaml
.bmad-core/data/: bmad-kb.md
.bmad-infrastructure-devops/: install-manifest.yaml
docs/: brownfield-architecture.md  onboarding-chatgpt.md  prd.md  testing.md  validation.md
docs/adr/: 001-prefer-streamable-http-over-sse.md  002-in-app-jwt-vs-traefik-forwardauth.md  003-prm-at-well-known-on-mcp-host.md  004-rfc-8414-path-insert-shim-via-traefik.md  005-bind-policy-127-0-0-1-local-0-0-0-0-container.md  README.md  _template.md
docs/architecture/: appendix-useful-commands.md  architecture-decisions-adr-summary.md  architecture-signoff-checklist.md  configuration-environment-variables.md  data-models-and-apis.md  definition-of-done-architecture.md  definition-of-ready-for-dev.md  deployment-cicd-mvp.md  development-and-deployment-current-reality.md  elicitation-plan-predev-questions.md  frnfr-gates-evidence-map.md  highlevel-architecture.md  if-enhancement-prd-provided-impact-analysis.md  index.md  integration-points-and-external-dependencies-planned-per-prd.md  introduction.md  next-actions-for-epic-1.md  observability-health.md  operational-notes-validation-added.md  ops-runbook-mvp.md  outstanding-risks-open-questions.md  status.md  (+12 more)
sample-deep-research-mcp/: Dockerfile  README.md  records.json  sample_mcp.py
scripts/: stream_smoke.py  validate_mvp.sh
tests/: _utils.py  test_healthz.py  test_prm_and_401.py
(+76 files in other folders)
